# ralph

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  RalphLoop.cfg  RalphLoop.tla  RalphLoopInfinite.cfg  RalphLoop_TTrace_1769163209.tla  TLA_SPEC.md  install.sh  plan.md  prek.toml  prompt.md  ralph-loop.sh  ralph-viewer-analysis.md
.claude/: on_precompact.sh  on_stop.sh  settings.json
.github/workflows/: ci.yml  release.yml
.ralph-loop-output/: iteration-1.txt
ralph-loop-rs/: Cargo.toml
ralph-loop-rs/src/: agent.rs  config.rs  error.rs  json_events.rs  lib.rs  loop_controller.rs  main.rs  monitor.rs  process.rs  self_update.rs  state.rs  tmux.rs  token_counter.rs  transcript.rs
ralph-loop-rs/tests/: version_test.rs
ralph-loop-ts/: .dependency-cruiser.cjs  AGENTS.md  README.md  artifacts.md  cli.md  configuration.md  extensions.md  implementation-kickoff.md  implementation-plan.md  index.md  internal-contracts.md  lifecycle.md  log.md  overview.md  package.json  pi-integration.md  prek.toml  source-layout.md  ticket-roadmap.md  tsconfig.json
ralph-loop-ts/.tickets/: ral-2q2g.md  ral-a62g.md  ral-b9sm.md  ral-dp8r.md  ral-g5ex.md  ral-gu4t.md  ral-h0n4.md  ral-l3ri.md  ral-lp9k.md  ral-m4r6.md  ral-og1z.md  ral-xtlt.md  rlt-w903.md
ralph-loop-ts/src/: cli.ts  index.ts
ralph-viewer/: Cargo.toml
ralph-viewer/src/: error.rs  formatter.rs  main.rs  picker.rs  run.rs  summary.rs  transcript.rs  watcher.rs
ralph-viewer/tests/: version_test.rs
specs/: architecture.md  cli.md  components.md  implementation_plan.md  readme.md
(+60 files in other folders)
